[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src.pyslammer"]

[project]
name = "pyslammer"
version = "0.0.2"
authors = [
    {name = "Lorne Arnold", email = "arnoldl@uw.edu"},
    {name = "Donald Garcia-Rivas", email = "rivas203@uw.edu"}
]
description = "Python package for calculating sliding block displacements (based on the USGS software SLAMMER)."
readme = "README.md"
license = {file = "LICENSE.txt"}

[project.urls]
Homepage = "https://github.com/lornearnold/pyslammer"