[project]
name = "pyslammer"
requires-python = ">=3.11"
version = "0.2.2"
description = "Python code for calculating sliding block displacements."
keywords = ["earthquake", "geotech", "slope stability", "sliding block", "seismic"]
readme = "README.md"
license = {file = "LICENSE.txt"}
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]
authors = [{name = "Lorne Arnold"}, {name = "Donald Garcia-Rivas"}]
maintainers = [{name = "Lorne Arnold", email = "arnoldl@uw.edu"}]

[tool.uv.scripts]
test = "pytest -q"

[tool.uv.sources]
pyslammer = { path = "src/pyslammer", editable = true }

[project.optional-dependencies]
demo = []

[project.urls]
Repository = "https://github.com/pyslammer/pyslammer"

[dependency-groups]
dev = [
    "pandas",
    "pytest>=8.3.5",
]
