[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "pyslammer"
requires-python = ">=3.11"
version = "0.2.2"
description = "Python code for calculating sliding block displacements."
keywords = ["earthquake", "geotech", "slope stability", "sliding block", "seismic"]
readme = "README.md"
license = {file = "LICENSE.txt"}
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "toml>=0.10.2",
    "jsonschema>=4.25.0",
]
authors = [{name = "Lorne Arnold"}, {name = "Donald Garcia-Rivas"}]
maintainers = [{name = "Lorne Arnold", email = "arnoldl@uw.edu"}]

[tool.uv.sources]
pyslammer = { path = ".", editable = true }

[project.optional-dependencies]
demo = []

[project.urls]
Repository = "https://github.com/pyslammer/pyslammer"

[dependency-groups]
dev = [
    "click>=8.2.1",
    "jsonschema>=4.25.0",
    "openpyxl>=3.1.5",
    "pandas",
    "pytest>=8.3.5",
    "scipy>=1.16.1",
    "toml>=0.10.2",
]
